--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>com.github.tuupertunut.fanning.Fanning</mainClass>
+        <mainClass>com.github.tuupertunut.fanning.gui.Fanning</mainClass>
     </properties>
 
     <build>
