--- a/pom.xml
+++ b/pom.xml
@@ -44,17 +44,18 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.2</version>
+                <configuration>
+                    <includes>
+                        <include>com/github/tuupertunut/fanning/**/*</include>
+                    </includes>
+                    <excludes>
+                        <exclude>com/github/tuupertunut/fanning/gui/**/*</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
                             <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>report</goal>
                         </goals>
                     </execution>
                 </executions>
