Added permanent JSON storage for fan curves.

--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,10 @@
             <artifactId>easybind</artifactId>
             <version>1.0.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.cliftonlabs</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>3.0.2</version>
+        </dependency>
     </dependencies>
 </project>
